[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/icons/home_l.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/Formula1Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ui/sound_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/camera_button.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/icons/home_d.png" type="Texture" id=5]
[ext_resource path="res://ui/braking_button.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/accelerate_button.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/fonts/Formula1Bold.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://ui/circuit_control.gd" type="Script" id=12]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 5.0
content_margin_right = 5.0
bg_color = Color( 0.321569, 0.34902, 0.411765, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=2]
size = 36
outline_size = 1
extra_spacing_top = 5
extra_spacing_bottom = 5
extra_spacing_char = 5
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 22
outline_size = 1
extra_spacing_top = 5
extra_spacing_bottom = 5
extra_spacing_char = 5
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 15.0
bg_color = Color( 0.321569, 0.34902, 0.411765, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="CircuitControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 12 )

[node name="TimePanel" type="PanelContainer" parent="."]
self_modulate = Color( 1, 1, 1, 0.392157 )
margin_left = 10.0
margin_top = 10.0
margin_right = 416.0
margin_bottom = 128.0
custom_styles/panel = SubResource( 1 )

[node name="Container" type="VBoxContainer" parent="TimePanel"]
margin_left = 5.0
margin_right = 401.0
margin_bottom = 118.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="TimeContainer" type="HBoxContainer" parent="TimePanel/Container"]
margin_top = 12.0
margin_right = 396.0
margin_bottom = 62.0
size_flags_vertical = 6
custom_constants/separation = 50

[node name="Home" type="TextureButton" parent="TimePanel/Container/TimeContainer"]
self_modulate = Color( 1, 1, 1, 0.392157 )
margin_right = 50.0
margin_bottom = 50.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 5 )

[node name="Label" type="Label" parent="TimePanel/Container/TimeContainer"]
margin_left = 100.0
margin_top = 1.0
margin_right = 396.0
margin_bottom = 48.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "000.000"
valign = 1

[node name="Separator" type="ColorRect" parent="TimePanel/Container"]
margin_top = 79.0
margin_right = 396.0
margin_bottom = 81.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 2, 2 )
color = Color( 1, 1, 1, 0.784314 )

[node name="LapLabel" type="Label" parent="TimePanel/Container"]
margin_top = 85.0
margin_right = 396.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 3 )
text = "0/0"
align = 2
valign = 1

[node name="SettingsLapContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -420.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 78.0
custom_constants/separation = 10

[node name="SettingsPanel" type="PanelContainer" parent="SettingsLapContainer"]
self_modulate = Color( 1, 1, 1, 0.392157 )
margin_right = 410.0
margin_bottom = 64.0
custom_styles/panel = SubResource( 4 )

[node name="SettingsContainer" type="HBoxContainer" parent="SettingsLapContainer/SettingsPanel"]
margin_left = 15.0
margin_right = 410.0
margin_bottom = 64.0

[node name="CameraButton" parent="SettingsLapContainer/SettingsPanel/SettingsContainer" instance=ExtResource( 4 )]
margin_right = 64.0
margin_bottom = 64.0

[node name="SoundButton" parent="SettingsLapContainer/SettingsPanel/SettingsContainer" instance=ExtResource( 3 )]
margin_left = 331.0
margin_right = 395.0
margin_bottom = 64.0
size_flags_horizontal = 10

[node name="LapContainer" type="VBoxContainer" parent="SettingsLapContainer"]
margin_top = 74.0
margin_right = 410.0
margin_bottom = 74.0

[node name="ControlContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -317.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="BrakingButton" parent="ControlContainer" instance=ExtResource( 6 )]
margin_right = 538.0
margin_bottom = 317.0
size_flags_horizontal = 3

[node name="AccelerateButton" parent="ControlContainer" instance=ExtResource( 7 )]
margin_left = 542.0
margin_right = 1080.0
margin_bottom = 317.0
size_flags_horizontal = 11

[connection signal="pressed" from="TimePanel/Container/TimeContainer/Home" to="." method="_on_home_pressed"]
